<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome!"
            android:layout_above="@id/btNotes"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textSize="50dp"
            />


        <Button
            android:id="@+id/btChange"
            android:layout_width="0dp"
            android:layout_height="7dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="121dp"
            android:text="@string/change_password" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="259dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="613dp"
            android:alpha="0.8"
            app:srcCompat="@drawable/welcome__user_"
            android:contentDescription="@string/welcome_user" />

        <ImageView
            android:id="@+id/btNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="106dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="628dp"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="34dp"
            android:background="#FAFAFA"
            android:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/goto_notes"
            android:contentDescription="@string/goto_notes" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="419dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="192dp"
            app:srcCompat="@drawable/prausan_welcome_text"
            android:contentDescription="@string/prausan_fingerprint_notes" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>